fix break on build yikes

--- a/src/components/headers/page.module.scss
+++ b/src/components/headers/page.module.scss
@@ -66,7 +66,6 @@
     display: flex;
     list-style: none;
     font-size: 0.8125rem;
-    margin: 0;
     padding: 0;
     margin-top: .25rem;
 
